# pay

./: .gitignore  AccountInfo.cpp  AccountInfo.h  AddressInfo.cpp  AddressInfo.h  BitcoinValue.cpp  BitcoinValue.h  CMakeLists.txt  CODE-OF-CONDUCT  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  FloweePay.cpp  FloweePay.h  MenuModel.cpp  MetaExtractor.cpp  NetDataProvider.cpp  NetDataProvider.h  NetPeer.cpp  NetPeer.h  NetworkLogClient.cpp  NetworkLogClient.h  NewWalletConfig.cpp  NewWalletConfig.h  NotificationManager.cpp  NotificationManager.h  Payment.cpp  Payment.h  PaymentDetailInputs.cpp  PaymentDetailInputs.h  PaymentDetailInputs_p.h  PaymentDetailOutput.cpp  PaymentDetailOutput_p.h  PaymentRequest.cpp  PaymentRequest.h  Payment_p.h  PortfolioDataProvider.cpp  PortfolioDataProvider.h  PortfolioDataProvider_p.h  (+30 more)
android/: AndroidManifest.xml  build-pay.sh  build.gradle  selfsigned.keystore
android/cmake/: FindBoost.cmake
android/docker/: Dockerfile  README.md  build-docker.sh
cmake/: FindQREncode.cmake
data/: .gitignore  data.qrc
desktop/: AccountConfigMenu.qml  AccountDetails.qml  AccountListItem.qml  AccountPage.qml  AccountSelectionPage.qml  AccountTypeSelector.qml  ArrowPoint.qml  BitcoinAmountLabel.qml  BitcoinValueField.qml  Button2.qml  CardTypeSelector.qml  ConfigItem.qml  ControlColors.js  FloweeCheckBox.qml  FloweeGroupBox.qml  FloweeMultilineTextField.qml  FloweeTabBar.qml  FloweeTextField.qml  LabelWithClipboard.qml  NetView.qml  NewAccountCreateBasicAccount.qml  NewAccountCreateHDAccount.qml  NewAccountDialog.qml  NewAccountImportAccount.qml  NewAccountPane.qml  PayTabButton.qml  PaymentTweakingPanel.qml  ReceiveTransactionPane.qml  SendTransactionPane.qml  SettingsPane.qml  SyncIndicator.qml  WalletEncryption.qml  WalletEncryptionStatus.qml  WalletFrame.qml  WalletTransaction.qml  WalletTransactionDetails.qml  WalletsOverview.qml  defaults.ini  i18n.qrc  main.qml  (+2 more)
desktop/i18n/: floweepay_nl.ts  floweepay_pl.ts
desktop/widgets/: ArrowPoint.qml  BitcoinAmountLabel.qml  BitcoinValueField.qml  Button.qml  CheckBox.qml  CheckBoxLabel.qml  CloseIcon.qml  ComboBox.qml  Dialog.qml  DialogButtonBox.qml  FiatValueField.qml  GroupBox.qml  LabelWithClipboard.qml  ListViewKeyHandler.qml  MoneyValueField.qml  MultilineTextField.qml  PasswdDialog.qml  ScrollThumb.qml  TabBar.qml  TextField.qml  WarningLabel.qml
guis/: ControlColors.js  desktop.qrc  mobile.qrc  widgets.qrc
guis/Flowee/: AccountTypeLabel.qml  AddressInfoWidget.qml  AddressLabel.qml  ArrowPoint.qml  BitcoinAmountLabel.qml  BitcoinValueField.qml  BroadcastFeedback.qml  Button.qml  CFIcon.qml  CardTypeSelector.qml  CashFusionIcon.qml  CheckBox.qml  CheckBoxLabel.qml  CloseIcon.qml  ComboBox.qml  Dialog.qml  DialogButtonBox.qml  FiatTxInfo.qml  FiatValueField.qml  GroupBox.qml  HamburgerMenu.qml  ImageButton.qml  Label.qml  LabelWithClipboard.qml  LabelWithCursor.qml  ListViewKeyHandler.qml  MoneyValueField.qml  MultilineTextField.qml  ObjectShaker.qml  PasswdDialog.qml  QRWidget.qml  RadioButton.qml  ScrollThumb.qml  TabBar.qml  TextField.qml  WalletSecretsView.qml  WarningLabel.qml
guis/desktop/: AccountConfigMenu.qml  AccountDetails.qml  AccountListItem.qml  AddressDbStats.qml  BlurComponents.qml  ConfigItem.qml  NetView.qml  NewAccountCreateBasicAccount.qml  NewAccountCreateHDAccount.qml  NewAccountImportAccount.qml  NewAccountPane.qml  PaymentTweakingPanel.qml  ReceiveTransactionPane.qml  SendTransactionPane.qml  SettingsPane.qml  Transaction.qml  TransactionDetails.qml  TransactionInfoSmall.qml  WalletEncryption.qml  WalletEncryptionStatus.qml  WalletTransaction.qml  defaults.ini  (+3 more)
mobile/: PeersOverview.qml  defaults.ini  main.qml  qml.qrc
modules/: CMakeLists.txt  README
modules/build-transaction/: BuildTransactionModuleInfo.cpp  BuildTransactionModuleInfo.h  CMakeLists.txt  PayToOthers.qml  build-transactions-data.qrc  data.qrc
modules/example/: CMakeLists.txt  ExampleModuleInfo.cpp  ExampleModuleInfo.h  ExamplePage.qml  example-data.qrc
modules/peers-view/: CMakeLists.txt  NetView.qml  PeersViewModuleInfo.cpp  PeersViewModuleInfo.h  StatsPage.qml  peers-page-data.qrc
src/: AccountConfig.cpp  AccountConfig.h  AccountInfo.cpp  AccountInfo.h  BitcoinValue.cpp  BitcoinValue.h  CMakeLists.txt  CameraController.cpp  CameraController.h  FloweePay.cpp  FloweePay.h  MenuModel.cpp  MenuModel.h  ModuleInfo.cpp  ModuleInfo.h  ModuleManager.cpp  ModuleManager.h  ModuleManager_empty.cpp  ModuleSection.cpp  ModuleSection.h  NetDataProvider.cpp  NetDataProvider.h  NetPeer.h  NetworkLogClient.cpp  NetworkLogClient.h  NewWalletConfig.cpp  NewWalletConfig.h  NotificationManager.cpp  Payment.cpp  Payment.h  PaymentBackend.cpp  PaymentBackend.h  PaymentDetailInputs_p.h  PaymentDetailOutput.cpp  PaymentDetailOutput_p.h  PaymentProtocol.cpp  PaymentProtocol.h  PaymentProtocol_p.h  PaymentRequest.cpp  PaymentRequest.h  (+37 more)
testing/: CMakeLists.txt
testing/priceHistory/: CMakeLists.txt  TestPriceHistory.cpp  TestPriceHistory.h
testing/wallet/: CMakeLists.txt  TestWallet.cpp  TestWallet.h
translations/: desktop-i18n.qrc  floweepay-common_de.ts  floweepay-common_en.ts  floweepay-common_es.ts  floweepay-common_ha.ts  floweepay-common_nl.ts  floweepay-common_pl.ts  floweepay-common_pt.ts  floweepay-desktop_de.ts  floweepay-desktop_en.ts  floweepay-desktop_es.ts  floweepay-desktop_ha.ts  floweepay-desktop_nl.ts  floweepay-desktop_pl.ts  floweepay-desktop_pt.ts  floweepay-mobile-nl.ts  floweepay-mobile_de.ts  floweepay-mobile_en.ts  floweepay-mobile_es.ts  floweepay-mobile_ha.ts  floweepay-mobile_nl.ts  floweepay-mobile_pl.ts  floweepay-mobile_pt.ts  mobile-i18n.qrc  module-build-transaction.ts  module-build-transaction_de.ts  module-build-transaction_en.ts  module-build-transaction_es.ts  module-build-transaction_ha.ts  module-build-transaction_nl.ts  module-build-transaction_pl.ts  module-build-transaction_pt.ts  module-peers-view_de.ts  module-peers-view_en.ts  module-peers-view_es.ts  module-peers-view_ha.ts  module-peers-view_nl.ts  module-peers-view_pl.ts  module-peers-view_pt.ts
(+67 files in other folders)
